--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -3,8 +3,10 @@
 {% block content %}
 <h1>Добро пожаловать!</h1>
 <ul>
-    {% for s in students %}
-    <li>{{ s }}</li>
+    {% for post in posts %}
+    <li>
+        <a href="{{ url_for('post_page', post_id=post.id) }}">{{ post.title }}</a>
+    </li>
     {% endfor %}
 </ul>
 {% endblock %}
