--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ post.title }}</h1>
-{{ post.text|safe }}
-<hr>
-<h3>Комментарии</h3>
-{# список комментариев #}
-<hr>
-<h3>Введите ваш комментарий</h3>
-<form method="post">
-    {{ form.hidden_tag() }}
-    {# поле ввода для комментария #}
-    <p><input type="submit" value="Добавить"></p>
-</form>
+    <h1>{{ post.title }}</h1>
+    {{ post.text|safe }}
+    <hr>
+    <h3>Комментарии</h3>
+    {# список комментариев #}
+    {% for c in post.comments %}
+        <p>{{c.text}} ({{c.username}})</p>
+    {% endfor %}
+    <hr>
+    <h3>Введите ваш комментарий</h3>
+    <form method="post">
+        {{ form.hidden_tag() }}
+        {# поле ввода для комментария #}
+        {{ form.text.label }} {{ form.text() }}
+        {{ form.username.label }} {{ form.username() }}
+        <p><input type="submit" value="Добавить"></p>
+    </form>
 {% endblock %}
